--- a/pages/p4/958970.md
+++ b/pages/p4/958970.md
@@ -1,4 +1,4 @@
-### 【必看】人民的力量：美国将再次伟大(视频)
+### 各大预言2021世界有大饥荒 中共闹粮荒 囤粮了吗你？(视频)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -9,30 +9,14 @@
  <div id="story_video" style="text-align: center;margin-top: 20px;">
  </div>
  <p>
-  大家好我是
-  <span href="https://www.secretchina.com/news/gb/tag/熊猫侠" target="_blank">
-   熊猫侠
-  </span>
-  Panda Man🐼
+  大家好，我是启明。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <div id="txt-mid1-t21-2017">
-  
-
----
-
-#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
-
-
-  </div>
- </div>
  <p>
-  喜欢我的频道，欢迎点赞，订阅，评论开启小铃铛🔔第一时间观看精彩内容哦〜
+  喜欢我的频道，欢迎点赞，订阅，评论，并开启小铃铛🔔就可在第一时间观看精彩内容哦〜
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -40,15 +24,29 @@
  </p>
  <p>
   <strong>
-   ●《熊猫侠》订阅频道
+   ●《启明笑谈》订阅频道
   </strong>
   <br>
-   <span href="https://www.youtube.com/channel/UCkCfjd8aOsJHdpgj6FD9L1w">
-    https://www.youtube.com/channel/UCkCfjd8aOsJHdpgj6FD9L1w
+   <span href="https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw">
+    https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw
    </span>
   </br>
  </p>
  (文章仅代表作者个人立场和观点)
+ <p>
+  来源:
+  <span href="/news/gb/tag/启明笑谈  ">
+   启明笑谈
+  </span>
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41TG"/>
+  版权所有，任何形式转载需看中国授权许可。
+  <span style="color:red">
+   严禁建立镜像网站.
+  </span>
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -70,30 +68,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/952955.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/952955.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/952955.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/18/952955.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/958970.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/958970.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/958970.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/13/958970.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/952955.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/958970.md' width='0px' height='0px'/>
