--- a/pages/p3/959028.md
+++ b/pages/p3/959028.md
@@ -1,4 +1,4 @@
-### 惊：接种流感疫苗后 韩死亡人数不断增加(图)
+### 她和男友买40套房 被分手1套房都不给(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="接种流感疫苗后 韩国死亡人数不断增加" src="https://img2.secretchina.com/pic/2019/2-3/p2356111a208219579-ss.jpg" style="height:415px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="婚姻 财产分割 " src="https://img3.secretchina.com/pic/2020/4-14/p2669971a754410802-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   一名小孩在接种疫苗（示意图/非本文图片/图片来源：Getty Images)
+   婚姻不是纸上谈兵，未婚同居不可取。（示意图/图片来源：Adobe Stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,74 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月23日讯】近日接连传出
+  【看中国2021年1月14日讯】近日，一个
   <strong>
-   韩国
+   <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
+    英国
+   </span>
   </strong>
-  流感
-  <span href="https://www.secretchina.com/news/gb/tag/疫苗" target="_blank">
-   疫苗
-  </span>
-  接种
+  女子与一名
   <strong>
-   死亡案例
+   千万富翁
   </strong>
-  ，截至当地时间23日下午1时，韩国接种
+  的
   <strong>
-   流感疫苗
+   财产争夺案
   </strong>
-  后死亡人数升至36人。韩国卫生部门将于当地时间23日晚7时公布是否叫停流感疫苗接种计划。
+  成为民众茶余饭后的热话。“这给我们上了一课，
+  <strong>
+   婚姻
+  </strong>
+  不是纸上谈兵，未婚同居不可取。”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/韩国" target="_blank">
-    韩国
-   </span>
-   36人接种流感疫苗接种后死亡
-  </strong>
- </p>
- <p>
-  综合韩联社、韩国纽西斯通讯社23日消息，韩国有1900万名青少年和高龄民众参与了
-  <span href="https://www.secretchina.com/news/gb/tag/流感疫苗" target="_blank">
-   流感疫苗
+  英国媒体报导，这起闹得纷纷扬扬的财产争夺案发生在
+  <span href="https://zh.wikipedia.org/wiki/%E8%8B%B1%E5%9B%BD" target="_blank">
+   英国
   </span>
-  免费预防接种计划。但近日接连传出接种者死亡的消息，其中包括一名17岁的少年。
+  。2孩子妈妈尼古拉将千万富翁柯林斯告上了法庭，一段曲折的爱情故事伴随800万英镑房产的纠缠，由此展现在世人面前。
  </p>
  <p>
-  韩联社称，虽然死亡人数上升，但接种疫苗和死亡之间的关联性尚未得到确认。针对36例死亡病例，韩国疾病管理厅解释称，这是接种流感疫苗和死亡之间的关联性尚未查明的情况下，单纯的申报统计数据。
+  故事要从1995年讲起。当时尼古拉遇到了柯林斯，当时的柯林斯是一个地产经纪，长得还是挺帅气的，两人开始了约会。
  </p>
  <p>
-  报道还援引一些专家的观点称，接种流感疫苗和死亡之间的关联性可能很小。报道还称，韩国法医经尸检认定，一名17岁少年接种流感疫苗两天后死亡，死因与接种疫苗无关。
+  好景不长，还在热恋中，柯林斯就被抓起来关进了大牢，原因是造“虚假账目”。
  </p>
  <p>
-  针对不断上升的死亡病例，韩国卫生部门于当地时间10月23日上午，邀请专家等召开会议，讨论死亡与接种疫苗之间的关联性，下午讨论是否继续推进流感疫苗接种计划，并将于晚间7点公布结果。
+  这时候的两个人才谈半年的恋爱，正是少了你我怎么活的热恋期。被判入狱6个月的柯林斯，也就是在这个时候，开始用情书轰炸尼古拉。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  而此前一天（22日），韩国卫生部门曾称，目前没有发现死亡与疫苗直接关联，将继续推进流感疫苗免费接种计划。
+  大意是“亲爱的，虽然我现在在牢里，但你等我半年，出来又是一条好汉，我们一定会有一个美好的未来，我要成立自己的商业帝国！到时候，我的一半财产就是你的！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,13 +85,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   巴西志愿者在接种
-   <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
-    中共病毒
-   </span>
-   (又称新冠状病毒，COVID-19)疫苗后死亡
-  </strong>
+  这样的豪言壮语把热恋中的尼古拉感动了，没有计较男友的案底，等他出狱，她还用自己的钱养了男友一阵。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,11 +100,7 @@
   </div>
  </center>
  <p>
-  而当前全球民众都关心的
-  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85%E7%96%AB%E8%8B%97" target="_blank">
-   武汉肺炎疫苗
-  </span>
-  在全世界也是密锣紧鼓的进行着。前两天，巴西传出一名志愿者在接种中共病毒疫苗后死亡。
+  柯林斯本来就做地产的，在这方面经验丰厚。出狱后觉得房地产很有“钱途”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +115,7 @@
   </div>
  </center>
  <p>
-  据《法广》援引《路透社》消息，巴西卫生部门周三（21日）宣布，英国制药公司阿斯利康(AstraZeneca)在巴西进行的中共病毒疫苗试验计划，有一名志愿者在接种疫苗后死亡。
+  于是，尼古拉以合伙人的身份，卖掉自己的公寓，又找父母借钱，投入大量的现金，帮助出狱的男友，一步步积累财富。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,7 +130,7 @@
   </div>
  </center>
  <p>
-  协助进行测试的巴西圣保罗联邦大学表示，死者是一名巴西籍人士。此前在英国有一名志愿者，在接种疫苗后出现突发性病情，该公司一度暂停所有地区的疫苗测试工作。
+  20年期间，他们在伦敦一共购买了40多套房子！总价值800万英镑，折合人民币也有7000万了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,11 +145,67 @@
   </div>
  </center>
  <p>
-  除了有人死亡外，巴西9000名疫苗试验志愿者在接种
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  科兴生物疫苗后，有35%的人出现不同程度的副作用，例如头痛、接种部位肿胀等副作用。
+  这对所向披靡的商业伙伴，还一起生了2个孩子。千好万好，唯有一点——两人没办结婚证。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  至于没办结婚证的原因法庭没有说，也许现代的人认为，合得来就住在一起，合不来分开就是了。何必去办结婚证那么麻烦。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  该起案件中的尼古拉在法庭上指出，柯林斯坐牢时的那些信里，写明了财产的一半归她。可能她觉得，黑字白纸的，跑不掉，一纸婚约要不要也无所谓。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  然而，这世间好多夫妻，能共患难却不能共富贵。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  柯林斯的财富帝国是建立起来了，2015年，他对他两个孩子的妈妈、昔日的合作伙伴尼古拉无情的说了句“分手吧”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +224,7 @@
   </ins>
  </center>
  <p>
-  让人担心的是，自今年9月以来，浙江省已有超过74万人接种了科兴生物的疫苗。据嘉兴当地政府官方消息，疫苗接种的年龄范围是18岁到59岁的易感人群。
+  面对男友如此无情无义，尼古拉只能含泪认了。感情没有了，40套房分一半，余生和孩子的生活还是有保障的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +239,7 @@
   </div>
  </center>
  <p>
-  但是，中国官方消息中，并未介绍这些接种过疫苗的人群是否出现副作用。
+  可惜，她还是算错了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,7 +254,7 @@
   </div>
  </center>
  <p>
-  巴西总统博尔索纳罗周三（10月21日）在脸书发文，明确表态，“（我们）不会购买科兴生物的疫苗。”
+  40套房，柯林斯一套也不分！没有结婚，凭啥分呢？还坚称，自己是独立经营了整个生意，尼古拉是个“不喜欢工作的母亲”，只负责照看孩子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,7 +269,7 @@
   </div>
  </center>
  <p>
-  除了科兴生物外，中国还有几款疫苗处于第3期临床试验阶段，安全性都还没获得国际认可。这些疫苗包括国药集团中国生物的两款灭活疫苗、康希诺/军科院的腺病毒载体疫苗等。
+  绝望的尼古拉最终在22年后看清了枕边人，一张状纸将柯林斯告上了法庭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,7 +284,7 @@
   </div>
  </center>
  <p>
-  中国国务院联防联控机制20日召开的新闻发布会透露。迄今为止，中国有6万人接受了这几款疫苗的测试接种。此前曾多次传出，中国有“受试者”在注射疫苗后出现嗜睡、乏力、头晕、发烧等症状。但中国科技部社会发展科技司副司长田保国对此表示，任何疫苗在研发试验或上市后发生不良反应都是有可能发生的，目前接到的报告都是轻度的，“初步显示了良好的安全性”。
+  近日，法院对该案进行审理，法官裁定柯林斯至少要和尼古拉平分其中7套房。这场分手财产争夺战暂时落幕。尼古拉会不会继续起诉千万富翁前男友，我们还不得而知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -270,27 +298,27 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+ <p>
+  对此，有网民为尼古拉抱不平：“就算只给你生娃照顾孩子、分手也得给点儿财产吧？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  也有网民表示：“这给我们上了一课，
+  <span href="https://www.secretchina.com/news/gb/tag/婚姻" target="_blank">
+   婚姻
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  不是纸上谈兵，未婚同居不可取。”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -303,6 +331,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:韩江雪
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41UC"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -320,13 +382,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950160.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950160.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950160.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/23/950160.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959028.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959028.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959028.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/14/959028.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/950160.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/959028.md' width='0px' height='0px'/>
