同步于: 1月14日13时52分

--- a/pages/p8/959024.md
+++ b/pages/p8/959024.md
@@ -1,4 +1,4 @@
-### 江西黑老大执行死刑 网友：好好查查保护伞(图)
+### 言论自由遭“封锁”？这些平台可替代(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="江西黑社会头目陈辉民于11月18日被执行死刑（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/11-18/p2820821a62421952-ss.jpg" style="height:336px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="脸书 推特 油管 谷歌" src="https://img2.secretchina.com/pic/2019/8-28/p2502502a188081156-ss.jpg"/>
   <br>
-   江西黑社会头目陈辉民于11月18日被执行死刑（图片来源：微博）
+   言论自由遭“封锁”？这些平台可替代。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,60 +29,156 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月18日讯】（看中国记者文俪综合报导）
+  本次美国大选，一个很明显的现象就是现任总统
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  阵营的言论遭到
   <strong>
-   黑社会
+   脸书
   </strong>
-  头目陈辉民于近日被
+  、
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/江西" target="_blank">
-    江西
-   </span>
+   推特
   </strong>
-  高院裁定核准死刑。今日（18日）上午，抚州中院对
+  、
   <strong>
-   陈辉民
+   油管
   </strong>
-  执行了
+  （Youtube）、
   <strong>
-   死刑
+   谷歌
   </strong>
-  。但有网友质疑：“作恶多端这么多年，现在才处理？应该再好好查一下后面的保护伞。”
+  （Google）的大肆封锁，这也让人们见识到了无所不在的深层政府影响力，以及中共长年经营下，早已成功渗透了美国各阶层。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合陆媒报导，江西省
-  <span href="https://zh.wikipedia.org/wiki/%E5%AE%9C%E9%BB%84%E5%8E%BF" target="_blank">
-   宜黄县
+  许多网友也开始呼吁离开这些平台，到其它没有言论封锁，可以充分享受言论自由的新平台。虽然目前这些替代的平台，无法与当下科技寡头所拥有的那么先进，但这些公司在技术上都很称职，而且已经拥有了许多用户。此外，有些网友可能还会发现，某些替代平台提供的功能，要比寡头们的平台更好用。
+ </p>
+ <p>
+  100％受够了网站（
+  <span href="https://100percentfedup.com/">
+   https://100percentfedup.com
   </span>
-  由陈辉民组织领导的黑社会性质团伙故意杀人等案件，近日被江西高院裁定核准陈辉民死刑。陈辉民于今日（18日）上午被抚州市中院执行死刑。
+  ）在日前就列出了允许言论自由，无言论审查的替代网络平台和媒体的名录。
  </p>
  <p>
-  据悉，陈辉民组织的
-  <span href="https://www.secretchina.com/news/gb/tag/黑社会" target="_blank">
-   黑社会
+  《100％受够了网站》表示，目前的主流社交和网络平台对保守派、自由主义、独立和非建制派言论进行了强烈的封杀，因此列出替代全球主义网络和媒体的名录给想搬家的网友参考，是非常必要的。好消息是，这些选择其实还不少。而在这些平台上，网友也能在这个非常时期，彼此保持联系，看见真实的新闻，并传播正义。
+ </p>
+ <p>
+  《网关专家》认为，《100％受够了网站》发布这个替代社交、网络和媒体平台名录是很好的开始，这能让拥有理性、自由思想的美国民众，可借此断绝和威权主义反言论平台的联系。
+ </p>
+ <p>
+  <strong>
+   ●社交平台
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如果您不愿意用
+  <span href="https://www.secretchina.com/news/gb/tag/推特" target="_blank">
+   推特
   </span>
-  犯罪团伙成员多达百余人，且在江西宜黄县作恶长达15年之久。自2004年以来，该黑社会组织实施故意杀人等各类犯罪活动多达90多起，其他违法犯罪活动16起，持有各类枪支24支，其犯罪活动共造成有6人死亡、3人重伤及20多人轻伤和轻微伤等严重的后果。
+  ，那么帕拉（Parler）和盖博（Gab）就是不错的选择。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  更甚者，
-  <span href="https://www.secretchina.com/news/gb/tag/陈辉民" target="_blank">
-   陈辉民
+  <span href="https://www.secretchina.com/news/gb/tag/脸书" target="_blank">
+   脸书
   </span>
-  2005年当众近距离开枪射杀1人，但在其“保护伞”的打点下，当时仅获刑3年半。2018年7月份，其领导的黑社会团伙中多名骨干落网。陈民辉于2019年11月27日被控20项罪名，数罪并罚被判死刑且没收个人财产。
+  也可以被米微（MeWe）、权枢（ Clouthub）、德讯（Safechat）这三款替代平台取代。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  2020年6月5日江西高院对陈辉民案维持原判，并向最高院报请核准
-  <span href="https://www.secretchina.com/news/gb/tag/死刑" target="_blank">
-   死刑
+  <strong>
+   ●通讯平台
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  觉得脸书信使（Facebook Messenger）这个即时通讯软件说话不方便，不妨换成电报信使（Telegram Messenger）和信号（Signal）看看。不和谐（Discord）软件也可以尝试。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   ●视频平台
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/油管" target="_blank">
+   油管
   </span>
-  。
- </p>
- <p>
-  报导中还指，陈辉民带头的黑社会组织背后的10名“保护伞”均被判刑，另外还有45名中共党员干部受到党纪等处分。
+  （YouTube）的替代平台也有几个，兰博（Rumble）、一念（Vimeo）、比特伞（Bitchute）、永亮（Brighteon）都在推荐之列。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -97,131 +193,28 @@
   </div>
  </center>
  <p>
-  大量
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  <strong>
+   ●搜索平台
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不用
+  <span href="https://www.secretchina.com/news/gb/tag/谷歌" target="_blank">
+   谷歌
   </span>
-  网友留言质疑：“抗战也就8年，为什么15年打不掉一个黑社会团伙？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “可以把保护伞的结果也写出来吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “当众打死人都没有事情？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “只要后台不倒，再打死几个也没事。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “江西黑恶势力能存在这么久，可见当地的官场是多么的腐败，没有包庇，没有保护伞，这些人能作恶如此之久？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “十几年的黑社会团伙？政府都死了？同流合污了吧！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “每一个势力强大的黑社会被打掉，必定是其保护伞已经倒了，所以扫黑除恶往往是跟公职人员贪污受贿有所挂钩的。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “哪个地方打黑成绩越突出，哪个地方当初就包庇的越狠。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “法律只是用来约束平民的。”
+  搜索的网友，可以用鸭鸭走（Duck Duck Go）进行搜索。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,7 +233,9 @@
   </ins>
  </center>
  <p>
-  “有黑必有伞，扫黑除恶、打财断血、毁伞破网必须环环相扣，才能真正斩断黑恶犯罪。”
+  <strong>
+   ●浏览器平台
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -255,7 +250,7 @@
   </div>
  </center>
  <p>
-  “后台倒了的才被扫了，后台还在的不照样继续黑吗？”
+  网页浏览器可以使用勇敢浏览器（Brave Browser）替代。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -270,7 +265,9 @@
   </div>
  </center>
  <p>
-  “2005年杀人，到现在才执行死刑，为中国速度点赞。”
+  <strong>
+   ●新闻平台
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -285,7 +282,7 @@
   </div>
  </center>
  <p>
-  “最大的黑社会是保护伞！”
+  不愿意看左媒及福克斯新闻的民众，可供选择的媒体平台就更多了，它们是：看中国新闻网（SecretChina）、全美新闻网（ One America News）、新唐人（New Tang Dynasty）、右派广播网（Right Side Broadcasting Network）、半付费的大纪元（Epoch Times）、阿波罗新闻网（Aboluowang）、付费的火焰电视（Blaze TV）、真正美国之声（Real America's Voice）、作战室大流行（War Room Pandemic）、新闻极限（NewsMax）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -300,7 +297,7 @@
   </div>
  </center>
  <p>
-  “什么时候把那些伤害女童的人也这么严惩，就更大快人心了。”
+  当然此举并不是要您与朋友们划清界限，毕竟为了美国大选与亲友反目成仇，反而正中下怀，因为中共在文化大革命时期，就最会来这套了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -315,41 +312,7 @@
   </div>
  </center>
  <p>
-  “其实最牛的还是镰刀斧头帮。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  但多接触这些媒体与平台，绝对能让你看见目前遭到各许多主流媒体封锁，无法广传的真实讯息。知道越多真相，了解自己身边发生的事，对自己及家人朋友也是种保护。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -362,6 +325,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:王承
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41U8"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -379,13 +376,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952982.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952982.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952982.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/18/952982.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959024.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959024.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959024.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/14/959024.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/952982.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/959024.md' width='0px' height='0px'/>
