--- a/pages/p3/959112.md
+++ b/pages/p3/959112.md
@@ -1,4 +1,4 @@
-### 王子沉睡15年 听到她声音后奇迹发生了(图)
+### 为啥娶了俄妹 中国小伙却抑郁了？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,67 +7,108 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="王子沉睡15年 听到她声音后奇迹发生了" src="https://img3.secretchina.com/pic/2020/5-28/p2698691a379624673-ss.jpg" style="height:399px; width:600px"/>
-  <br>
-   2014年，法国某医院的一名植物人。（示意图/非本文图片/图片来源：FREDERICK FLORIN/AFP via Getty Images）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+  <img alt="俄罗斯 俄罗斯姑娘 异国婚姻" src="https://img3.secretchina.com/pic/2021/1-14/p2857451a885490117-ss.jpg" style="height:399px; width:600px"/>
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月23日讯】15年前，沙特阿拉伯王子阿尔・瓦莱德（Al-Waleed bin Khalid Al-Saud）遭遇
+  【看
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  2021年1月14日讯】在普遍的印象中，
   <strong>
-   车祸
+   俄罗斯
   </strong>
-  而脑出血昏迷，成了
+  姑娘貌美如花、举止得体，既能喝得了1斤伏特加，又能在家洗衣做饭一个不落。对于中国小伙来说，还有更重要的一点是，娶个
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/植物人" target="_blank">
-    植物人
-   </span>
+   俄罗斯媳妇
   </strong>
-  。最近，一段有关该王子的视频在网上热传，观看次数已经破20万次，视频中，一名女子呼唤他，王子竟然能抬起手指做出回应，视频感动无数网民。
+  ，丈母娘不会“狮子开大口”索要高价彩礼。也因此，俄罗斯姑娘是各国单身汉、特别是中国小伙子梦寐以求的伴侣。不过，也有不少中国小伙娶了俄罗斯姑娘后，觉得抑郁了。这到底是怎么回事呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
+  其实，
+  <span href="https://zh.wikipedia.org/wiki/%E6%B6%89%E5%A4%96%E5%A9%9A%E5%A7%BB" target="_blank">
+   跨国婚姻
+  </span>
+  虽然浪漫，但也不得不面对文化差异的问题。如果处理不好，很可能会引发婚姻危机哦。
+ </p>
+ <p>
+  在俄罗斯生活了一段时间的华人@娃娃脸的肖叔叔，在听了这些“中国女婿”的诉苦后，总结出6个文化差异：
+ </p>
+ <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/沙特" target="_blank">
-    沙特
-   </span>
-   王子沉睡15年 听到她声音后奇迹发生了
+   1、疫情下，口罩戴还是不戴？
   </strong>
  </p>
  <p>
-  根据《每日邮报》报导，
-  <span href="https://zh.wikipedia.org/wiki/%E6%B2%99%E7%89%B9%E9%98%BF%E6%8B%89%E4%BC%AF" target="_blank">
-   沙特
-  </span>
-  阿拉伯王子瓦莱德2005年就读军校时，骑车遭遇车祸而脑出血昏迷，使用呼吸机维持生命至今，期间对外界几乎没什么反应，最后一次纪录已在5年前，其家人却不愿放弃任何希望，苦等至今。
+  俄罗斯人现在开始戴口罩了吗？
  </p>
  <p>
-  皇天不负有心人，沉睡了15年后，瓦莱德对外界终于有了反应。从一段影片中可见，瓦莱德躺在床上，双眼紧闭。影片中还听到一个女子在欢呼瓦莱德：“嗨，你好，让我看看”，当王子动了手指回应后，她惊喜叫道，“再来，高一点，再高一点”，而王子也努力的把整个手掌抬了起来，让她感动直呼“太棒了！”
+  出我们意料的是，尽管普京三令五申，俄罗斯疫情扩散不止，但至今，大部分俄罗斯人，仍不佩戴口罩。因为在俄罗斯人看来，该来的总会来的，戴口罩防不住，且俄罗斯人身体素质好，抗得过去。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  目前为止，该短片观看次数已破20万次，沙特阿拉伯公主沙特（Noura Bint Talal Al-Saud）也分享这令人振奋的消息。
+  中国丈夫和俄国媳妇的核心冲突，便是这个小小口罩。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  瓦莱德的故事似乎在告诉人们：“无论遇到任何困难逆境，永不放弃，只要坚持，就会看到希望。”
+  一位中国丈夫抱怨说：“我戴口罩出去了，她不戴口罩出去了，那我回家戴不戴口罩？我出去戴口罩有啥意义？传染给孩子又咋办？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这确实是个道德困境。强令妻子佩戴口罩，干涉伴侣自由，引得家庭不快；在家里还佩戴口罩，自己憋屈，还和家人疏远。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +124,7 @@
  </center>
  <p>
   <strong>
-   沉睡27年植物人母亲 听到孩子与人吵架竟醒了过来
+   2、葵花籽，究竟能不能吃？
   </strong>
  </p>
  <center>
@@ -99,11 +140,7 @@
   </div>
  </center>
  <p>
-  2019年外媒报导，1991年，时年32岁的阿拉伯联合酋长国妈妈Munira Abdulla，去幼儿园接4岁的儿子Omar Webair放学回家路上遇上车祸，为了保护儿子，妈妈被撞成
-  <span href="https://zh.wikipedia.org/wiki/%E6%8C%81%E7%BA%8C%E6%80%A7%E6%A4%8D%E7%89%A9%E7%8B%80%E6%85%8B" target="_blank">
-   植物人
-  </span>
-  。没想到27年后，听见孩子跟人吵架，植物人母亲居然奇迹般醒了过来。
+  瓜子是中国的国民级小食了。中国人爱磕瓜子程度人人皆知。但是，在俄罗斯，向日葵是俄罗斯的国花，而且被称为太阳花。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +155,7 @@
   </div>
  </center>
  <p>
-  报导称，车祸发生时，出于母亲保护孩子的本能，Munira用手臂紧紧抱着儿子Omar，希望把对他的伤害降到最低。医生赶到现场后发现，Omar只是额头受了点皮外伤，但拚死保护他的妈妈Munira，头部却遭受重创，陷入昏迷当中。
+  关于向日葵，俄罗斯历史上有这样一个传说:古代有一位农夫，他有一个叫明姑的女儿。明姑憨厚老实，长相俊俏，却被后娘“女霸王”视为眼中钉，受到百般凌辱虐待。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +170,7 @@
   </div>
  </center>
  <p>
-  家人先是把她送到阿布扎比的医院治疗，但却没有任何效果。他们又费尽周折地把她送到了伦敦的医院，希望那里的先进技术能治好她。
+  一次，明姑因一件小事顶撞了后娘一句，发怒的后娘用皮鞭抽打她，可一失手打到了前来劝解的亲生女儿身上。后娘又气又恨，夜里趁明姑熟睡之际挖掉了她的眼睛。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +185,7 @@
   </div>
  </center>
  <p>
-  可惜，所有的医生对此都束手无策。
+  明姑疼痛难忍，破门出逃，不久死去。死后，在明姑坟上开出一盘鲜丽的黄花，终日面向阳光，它就是向日葵。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,7 +200,7 @@
   </div>
  </center>
  <p>
-  好心的医生建议Munira的家人放弃，但他们还是执着地把她带回家乡阿奈恩。之后的二十多年里，她一直辗转于当地的各个医疗机构。
+  这个传说使人们痛恨暴力与黑暗，向往并追求光明。因此，向日葵的花语是:光明、希望与忠诚。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -178,7 +215,7 @@
   </div>
  </center>
  <p>
-  这一治就又是一年多，但Munira却没有丝毫要苏醒的迹象，她似乎就要永远沉睡下去了……
+  俄罗斯人对向日葵喜爱有加，并认为向日葵是“光明象征”。对于俄罗斯媳妇来说，“光明象征”怎么能摘下来、炒来吃呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,7 +230,9 @@
   </div>
  </center>
  <p>
-  2018年的一年，Munira的儿子Omar在病房里跟人起了争执，双方互不相让，声音越来越大。就在这时，病床上一动不动的Munira忽然从喉咙里发出一阵奇奇怪怪的声音。
+  <strong>
+   3、数字忌讳，有啥不同？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -208,22 +247,7 @@
   </div>
  </center>
  <p>
-  惊喜的Omar以为妈妈要醒了，立刻叫来医生做检查，但折腾了一场之后，医生告诉Omar，他妈妈还是老样子，一切正常，但也并没有苏醒的迹象。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  Omar虽然有些失落，但经过27年的漫长等待，他早已经习惯如此。这场空欢喜之后，他依旧一如既往地照料着母亲。
+  其实，在各个民族中，都存在数字忌讳，只不过，每个民族具体的忌讳不同。中国人经常说“好事成双”，除四、十四等中国人认为不吉利的数字之外，中国人对双数特别钟爱，相反，俄罗斯人却钟情于单数。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -242,7 +266,7 @@
   </ins>
  </center>
  <p>
-  没想到的是，奇迹在短短三天之后就出现了！
+  许多中国男孩追求俄国女孩，送上了10朵玫瑰，本以为是象征十全十美，但俄国女孩会很不高兴——因为，双数花朵，是送给死人的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -257,7 +281,7 @@
   </div>
  </center>
  <p>
-  这天，Omar趴在母亲的病床边休息，迷迷糊糊之间听见有人叫自己的名字。他抬起头左右看了一会儿，猛地回过神来，认出了那个熟悉又陌生的声音，“是妈妈！是妈妈在叫我的名字！”
+  多说一句，单数中也有俄罗斯人禁忌的数字，如他们认为星期五和13号是死亡和凶险的象征。相反，数字七对俄罗斯人犹如六合八对中国人一样，是幸运和成功的象征。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -272,7 +296,9 @@
   </div>
  </center>
  <p>
-  Omar开心得快要跳起来，为这一刻，他已经从4岁等到了31岁，等了足足27年，终于又听见妈妈呼唤自己的名字了！经过医生的后续治疗，很快，Munira对外界的反应就越来越明显，甚至还可以跟人进行一些日常的交流。
+  <strong>
+   4、出远门前，静坐不静坐？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -287,7 +313,7 @@
   </div>
  </center>
  <p>
-  沉睡了27年，如今终于苏醒。大家都觉得这事儿有些不可思议，Omar认为，妈妈是听见他跟别人争吵，出于担心孩子的本能，一着急就醒了过来，医生也觉得有这种可能。
+  面对这个问题，也许你会心生疑惑，出远门和静坐，有什么关系？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -302,7 +328,7 @@
   </div>
  </center>
  <p>
-  Omar在接受媒体采访时表示，“我一直没有放弃妈妈，因为我内心深处总觉得，她总有一天会醒过来的。之所以跟大家分享我们母子的故事，是想告诉大家，即便所爱之人对外界已经毫无感知，也不要轻易放弃他们，认为他们已经死了……”
+  其实，俄罗斯人出远门之前，送者和行者都要静坐。在他们看来，这样的习俗，可以保佑行者平安顺利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,7 +343,7 @@
   </div>
  </center>
  <p>
-  27年前为了保护孩子成为植物人，27年后又因为担心孩子，从植物状态苏醒……母爱如海，跨越了几十年的时光，拯救孩子也拯救了自己……
+  那发出声响呢？比如在室内吹口哨，或者睡觉前扫地。这可不是好兆头，在俄罗斯人看来，这是会把钱财败光的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -331,27 +357,40 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  <strong>
+   5、黄道吉日，按中国历，还是俄国历？
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  黄道吉日的意识，不止中国有，俄罗斯也有。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  按照传统，俄罗斯人认为周三和周五不是好日子，要避免组织重大活动或回家省亲。不过，对于中国女婿来说，周三周五和其他日子没啥区别啊。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -364,6 +403,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:韩江雪
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41VY"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -381,13 +454,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950176.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950176.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950176.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/23/950176.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959112.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959112.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959112.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/14/959112.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/950176.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/959112.md' width='0px' height='0px'/>
