--- a/pages/p3/959153.md
+++ b/pages/p3/959153.md
@@ -1,4 +1,4 @@
-### 有驱逐令在身华人女子 豪骗300万挥霍(图)
+### 华女串个门闲聊几句 竟染疫了(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="有驱逐令在身华人女子 还敢豪骗同胞300万" src="https://img2.secretchina.com/pic/2018/12-8/p2319011a480673594-ss.jpg" style="height:400px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="武汉肺炎 华人 染疫" src="https://img3.secretchina.com/pic/2020/3-17/p2649941a292714198-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   加拿大法庭（示意图/图片来源：eff Vinnick/Getty Images）
+   纽约一名中国留学生串个门，没想到就染疫了。（图为几名走在纽约街头的华人/非本文人物/图片来源：Cindy Ord/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,48 +29,53 @@
   </div>
  </div>
  <p>
-  【看中国2020年10月24日讯】
+  【看中国2021年1月15日讯】最近虽说美国和加拿大都开打
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
-    加拿大
+   疫苗
+  </strong>
+  ，但是疫情却完全没有减缓的意思，仍旧在人们身边不断肆虐。不少人也越来越担心，会不会哪天
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+    中共病毒
    </span>
+   (又称新冠状病毒，COVID-19)
   </strong>
-  温哥华一名有
+  在不经意间落到自己的头上。最近，纽约就有一名中国女
   <strong>
-   驱逐令
+   留学生
   </strong>
-  在身的华人女子，加拿大一名有驱逐令在身的华人女子，不是老老实实、脚踏实地的做人，以期望有一天能打赢驱逐令官司后，好好在加拿大好好生活下去，相反，她涉嫌以成立帮助中国留学生和游客的企业为名，向3名投资者
+  在网上分享了她从不幸
   <strong>
-   欺诈
+   感染
   </strong>
-  逾300万元。她将骗来的钱用来给自己赌博、购买个人物品、还债，甚至用来支付替她打驱逐令抗辩官司的律师费等等。卑诗证券委员会表示，该案听证会将于12月举行。
+  到彻底治愈的全过程，让人感觉心惊肉跳：即使这名女生平时非常注意防疫，却依旧因为和朋友的几句闲聊而中招。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据加拿大媒体报道，卑诗证券委员会（BCSC）10月21日称，一名此前接到
-  <span href="https://zh.wikipedia.org/wiki/1976%E5%B9%B4%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%A7%BB%E6%B0%91%E6%B3%95" target="_blank">
-   加拿大
+  一名署名为陈小桐的网民，今年19岁，是一名身在纽约的中国
+  <span href="https://www.secretchina.com/news/gb/tag/留学生" target="_blank">
+   留学生
   </span>
-  驱逐令的华人女子张美云（Meiyun Zhang，音译），涉嫌在2014年至2016年间，说服两名温哥华居民和一名列治文居民，借钱给她或投资到她的生意上，可以在没有风险的情况下得到6％至10％的投资回报。
+  。她表示自己平时非常注意防疫，上个月，她只不过去朋友家取件东西，期间聊了几句，没想到居然中招了。
  </p>
  <p>
-  卑诗证监会表示，没有风险的投资是不可能达到这个比率的回报的。
+  一开始她只是觉得嗓子不太舒服，并且开始打喷嚏，但对此她并没有太在意。由于平时十分注重防疫，因此她也没往感染这方面想，以为只是过敏罢了。
  </p>
  <p>
-  报道称，张美云告诉其中两名投资者，其投资的款项是用来帮助
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  然而就在这时，陈小桐得知了自己朋友室友确诊的消息，而她几天前才刚去过朋友家，并且在她们家闲聊了几句。
+ </p>
+ <p>
+  得知这一消息后，陈小桐非常害怕，因为她本身就患有哮喘，像
+  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85" target="_blank">
+   中共病毒
   </span>
-  留学生在加拿大取得签证的业务。她向第三名投资者称，款项会用于外币兑换加币，给中国留学生和来加拿大的游客使用。
+  这种直接攻击肺部呼吸系统的疾病来说，对她来说很有可能是致命的。
  </p>
  <p>
-  但事实上，张美云并没有按她说的把钱用在向投资者所承诺的项目上。证监会指控她将钱花在下列事项：
- </p>
- <p>
-  1、向加拿大和中国的投资者支付回报；
+  于是陈小桐立即就去诊所进行了检测，结果让她的心一下子跌到了谷底：阳性！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -85,7 +90,7 @@
   </div>
  </center>
  <p>
-  2、向卡尔加里房地产经纪人偿还个人贷款；
+  但奇怪的是，她朋友和确诊的室友朝夕相处，却没有检测出阳性，反而是检测出携带抗体。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -100,7 +105,7 @@
   </div>
  </center>
  <p>
-  3、个人购买物品；
+  被检测出确诊后，陈小桐立刻就开始了隔离，幸好有男朋友在，帮她买了体温计和血氧仪，随时监测身体状况，同时还买了哮喘喷雾以防万一。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -115,7 +120,7 @@
   </div>
  </center>
  <p>
-  4、支付个人水电费；
+  不幸中的万幸是，陈小桐的症状比较轻，在隔离第三天的时候，她就感觉身体好很多了，心情也好了很多。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +135,7 @@
   </div>
  </center>
  <p>
-  5、支付移民律师费用，用以抗辩加拿大移民部对其发出的遣返令；
+  虽然还是会有胸闷气短的情况，但据陈小桐称，她由于患有哮喘，这种症状她原本就有，所以也没有太放在心上。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +150,22 @@
   </div>
  </center>
  <p>
-  6、提取现金；
+  除此之外，就稍微有些咳嗽，流鼻涕，味觉嗅觉也都正常，但最影响她的还是失眠问题。有可能是确诊之后太过紧张，她有两晚上整夜整夜的睡不着。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但陈小桐自己也很清楚，调整心态十分重要，心情不好再加上睡眠问题将会非常影响胃口，抵抗力也会随之下降。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,7 +184,7 @@
   </ins>
  </center>
  <p>
-  7、在赌场赌博。
+  2020年的最后几天，在确诊了13天后，陈小桐又一次进行了检测，幸运的是，这次的检测结果转阴了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,7 +199,7 @@
   </div>
  </center>
  <p>
-  与此同时，张美云牵涉两宗卑诗最高法院的民事诉讼。一名列治文周姓退休人士Nan Ping Zhou,于2016年7月至2017年12月间，把钱交给张美云。
+  整个隔离期间陈小桐都在社交媒体上记录，吸引了上万人观看，大家都在为她加油打气，还有不少同样确诊的华人们，一起交流了经验。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +214,7 @@
   </div>
  </center>
  <p>
-  最初张美云还了部分金钱，但从2018年1月起便停止还钱。另一民事诉讼原诉人为Wendy Hau Wan Parker，她是温哥华女商人，在2017年2月至12月间与张美云签下7份借款协议，但到期对方都没有还钱，至今欠她6万元。
+  在隔离期间，陈小桐居然还网考了托福，令不少网民佩服。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +229,7 @@
   </div>
  </center>
  <p>
-  BCSC表示，听证会将于12月举行。
+  对此她表示：“疫情不能成为人们停滞不前的借口，生活总要继续。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -223,27 +243,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  陈小桐的运气很好，没有出现任何重症，但这并不意味着所有人都能毫发无损地撑过去。希望大家平时一定要注意防疫，不要被病毒感染。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -256,6 +257,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:韩江雪
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41WD"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -273,13 +308,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950282.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950282.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950282.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/25/950282.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959153.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959153.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/959153.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/15/959153.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/950282.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/959153.md' width='0px' height='0px'/>
