--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -115737,4 +115737,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01151201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01151251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
