--- a/pages/p8/959096.md
+++ b/pages/p8/959096.md
@@ -1,4 +1,4 @@
-### 7个改变命运的影响力(图)
+### 如何用“20元”请老板吃大餐？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,12 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p dir="ltr" style="text-align:center">
-  <img alt="影响力 成就 命运 习惯" src="https://img3.secretchina.com/pic/2020/9-10/p2773362a162487219-ss.jpg"/>
+  <img alt="求职 面试 录取" src="https://img3.secretchina.com/pic/2020/1-29/p2615202a561092845-ss.jpg"/>
   <br>
-   <strong>
-    影响力
-   </strong>
-   需要练习，时刻提醒自己。（图片来源：Adobe Stock）
+   20元如何请老板吃大餐？（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -24,77 +21,53 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：中共战狼大使涉黄被抓现行，遭国际嘲讽；官方辟谣恐惹无数麻烦，中共官员到底在想什么呢？](http://141.164.51.119:10000/videos/news/qp03.html)
-
-#### [ 🔥  前中共雞西市副市長李傳良公開對抗中共暴政聲明](http://141.164.51.119:10000/videos/news/../tui/index.html)
-
-#### [ 🔥  中共派系鬥爭是怎麼形成的｜「中共派系鬥爭」解讀](http://141.164.51.119:10000/videos/news/don02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p dir="ltr">
-  <span href="https://www.secretchina.com/news/gb/tag/影响力" target="_blank">
-   影响力
-  </span>
-  决定
+  一家公司举行一场招聘，负责的是老李。招聘信息发布了出去，接到了不少的
   <strong>
-   成就
+   <span href="https://www.secretchina.com/news/gb/tag/求职" target="_blank">
+    求职
+   </span>
   </strong>
-  ，成就改变
+  申请。在经过了人事部的首轮
   <strong>
-   命运
+   面试
   </strong>
-  。影响力不是天生的，是后天形成的，它源于你的
-  <strong>
-   习惯
-  </strong>
-  ，通过各种行为表现出来的。那么，如何培养自己的影响力呢？总结以下7点。
+  之后，最后只剩了3位求职者。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p dir="ltr">
+  老李对3人的简历，都很满意，要
   <strong>
-   1、寡言
+   录取
   </strong>
+  谁，可真是个难题。他把3人叫到了小会议室，一起进行
+  <span href="https://www.secretchina.com/news/gb/tag/面试" target="_blank">
+   面试
+  </span>
+  。
  </p>
  <p dir="ltr">
-  世界上有些人的确以犀利的演讲术著称，但仔细观察就会发现，他们在说话的时候，都是尽量少说，不会叽里呱啦地讲个没完。
+  看着眼前的3位求职者，他笑着说道：“欢迎参加本公司的面试，哪位可以胜出，就看最后的考试题。”
  </p>
  <p dir="ltr">
-  “与其滔滔不绝地打倒所有人，不如保持缄默。”为何？原因有２个：
+  “给你20块，怎么请老板吃大餐？”
  </p>
  <p dir="ltr">
-  1）说的越少，越能避免自相矛盾。少说话的人不太有机会讲出让自己后悔的话。
+  说完问题之后，老李将目光放在了身前3人的身上，仔细打量起他们的表情。因为，除了答案，求职者面对问题的表现也很重要。
  </p>
- <p dir="ltr">
-  2）说的越少，言简意赅，让人觉得权威，尊敬之情便油然而生。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
+ <p>
   <strong>
-   ２、灵活
+   一、觉得这个钱不够
   </strong>
  </p>
  <center>
@@ -110,7 +83,37 @@
   </div>
  </center>
  <p dir="ltr">
-  开动脑筋，想办法绕过面前的阻碍。即便是面对上司的阻拦，他们也能想办法在其他地方征得同意，继续做下去。
+  最先回答的是一位男生。他在听到问题的时候，眼神之中就闪过一丝诧异，接着眉头紧锁，然后思考了一下，便开口回答。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “面试官，我觉得这个钱不够。现在去外面随便吃个快餐，就差不多要20块钱了，就算是点外卖，可能20块钱也点不到两个菜。要想请老板吃顿好的，肯定是不够的，一个人吃还差不多。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  男生说的是大实话，20块钱确实很少，要满足两人吃饭，就算是简单的饭菜都可能不够，更不用说吃顿好的了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -125,7 +128,7 @@
   </div>
  </center>
  <p dir="ltr">
-  灵活并不是每次在面对反对意见时都会当好好先生，折衷去逢迎别人。
+  老李听完了答复，缓缓地摇摇头，说道：“办法还是有的，只是你有想到罢了”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -140,69 +143,7 @@
   </div>
  </center>
  <p dir="ltr">
-  灵活是一种解决问题的能力，又是让人佩服的品格。职场瞬息万变，挑战不计其数。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
-  <strong>
-   ３、不吵架
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
-  尽管有时大声好像真的能奏效，但你在上面浪费的时间精力，不如用行动证明自己的想法是对的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
-  另外，智者通常不会觉得一定要在嘴巴上占到便宜，因为他们知道，这不是赢得人家尊重的方式。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
-  他们不在乎谁输谁赢，只要自己用行动证明出想法的中正确，然后执行，就心满意足了。
+  男生的回答并没有得到老李的认可。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -218,7 +159,7 @@
  </center>
  <p dir="ltr">
   <strong>
-   ４、经营感情
+   二、要不试试霸王餐？
   </strong>
  </p>
  <center>
@@ -234,7 +175,7 @@
   </div>
  </center>
  <p dir="ltr">
-  感情分很多种：亲情、友情、爱情……无论是哪一种，他们都不会放过。
+  接着回答的是一位女生，她在听到问题的时候，也是有些诧异，眼神之中透露出一种怀疑的目光。她跟着男生的后面，继续回答。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -249,7 +190,7 @@
   </div>
  </center>
  <p dir="ltr">
-  如果脱离了群体，脱离了感情，人就容易变得偏执，因为人都需要爱。有影响力的人，会把时间花在他看中的人身上，和他们吃饭、聊天、出去玩。
+  “20块钱想要吃顿好的，确实很难。就算去一般的饭店，也就点个青菜的样子，更别说肉了。要不我们试试吃顿霸王餐吧？或者我去找朋友借钱？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -264,7 +205,7 @@
   </div>
  </center>
  <p dir="ltr">
-  人际关系的好坏，也会影响别人对你的看法。
+  女孩的话一说出口，现场的人都用奇怪的眼光看着她。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -279,9 +220,7 @@
   </div>
  </center>
  <p dir="ltr">
-  <strong>
-   ５、三思后行
-  </strong>
+  都没有想到，女孩竟然会说出这样的话。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -296,7 +235,7 @@
   </div>
  </center>
  <p dir="ltr">
-  下棋的高手，总能在举旗之前就想好之后的几步，任何变化都逃不过他的手掌心。
+  霸王餐就是点餐消费而故意不付钱，又称白吃白喝，竟然说要带老板去吃霸王餐！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -311,7 +250,7 @@
   </div>
  </center>
  <p dir="ltr">
-  有影响力的人，也总是在做任何举动之前，就已经仔细思考过可能出现的状况。
+  老李看着女孩，回道：“你这想法不错，能够给老板留下深刻的印象。不过，我觉得吃完这顿饭之后，可能老板就会想着要不要开除你了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -330,7 +269,7 @@
   </ins>
  </center>
  <p dir="ltr">
-  即使是财务困难、精神上的磨难，他们也都能熬过去，因为这些，都是他们早就想过的，是通往成功的路途，不是一马平川。一旦挺过来，收获就是成功。
+  老李并不赞同女孩的回答。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -346,7 +285,7 @@
  </center>
  <p dir="ltr">
   <strong>
-   ６、选对时机
+   三、可以先吃饭 后补钱
   </strong>
  </p>
  <center>
@@ -362,7 +301,7 @@
   </div>
  </center>
  <p dir="ltr">
-  做什么不重要，“什么时候”做，才是关键。
+  最后一位是应届生，也是求职者里面年龄最小的。他在听到问题的时候，表现得十分的冷静，就好像之前就听过这个问题一样。他是最后一个开口回复。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -377,7 +316,7 @@
   </div>
  </center>
  <p dir="ltr">
-  你可以想像一下要跟老板汇报一个坏消息，是选在老板开完会后很火大的时候说呢？还是他心情好的时候说呢？
+  “我会带着老板去一家我熟悉的饭店。就算身上只有20块钱，只要我跟饭店老板说清楚，依旧可以点不少菜，反正大家都很熟，剩下的钱后面补上就可以了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -392,7 +331,7 @@
   </div>
  </center>
  <p dir="ltr">
-  在做任何事情之前，学会看场合，懂得看时机。
+  老李听完点点头，同意了这种想法。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -407,9 +346,7 @@
   </div>
  </center>
  <p dir="ltr">
-  <strong>
-   ７、脱颖而出
-  </strong>
+  确实，这个回答有理有据，还能涉及到人脉，算得上是三人之中最好的回答。而且在回答问题的时候，应届生表现出来的是沉着和冷静。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -424,71 +361,26 @@
   </div>
  </center>
  <p dir="ltr">
-  不要总是循规蹈矩。你要跟别人看的不同、想的不同，努力工作，让自己变得与众不同，让自己被大家看到、认可。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
-  没有人天生的就是领袖。影响力是可以“培养”的，是有诀窍的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p dir="ltr">
-  影响力需要不断练习，时刻提醒自己，一天一天地坚持。总有一天，会培养出一种别样的气质。所以，要把这7个要点记下来喔！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  遇事有条理，遇事不慌张，不正是公司需要的员工吗？最后当然
+  <span href="https://www.secretchina.com/news/gb/tag/录取" target="_blank">
+   录取
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+  这位应届生喽。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  如果你也参加应聘，是否有更好答案提供给大家呢？如果有，请写在评论区喔！
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -501,6 +393,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:肖品
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41VI"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -518,13 +444,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945705.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945705.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945705.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/12/945705.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959096.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959096.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959096.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/15/959096.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/945705.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/959096.md' width='0px' height='0px'/>
